[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
backoff = { version = "0.4.0", features = ["tokio"] }
regex = "1.8.1"
reqwest = "0.11.17"
# 
tokio = { version = "1.28.0", features = ["rt-multi-thread", "fs", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
